# hash_checker

./: .gitignore  Cargo.toml  README.md  build.rs
lang/: CH_de.toml  CH_fr.toml  CH_it.toml  DE_de.toml  EN_en.default.toml  FR_fr.toml  IT_it.toml
scripts/: create-gpg-key.ps1  create-test-cert.ps1  sign-release.ps1
src/: checksum.rs  cli.rs  gui.rs  hasher.rs  integration.rs  ipc.rs  language.rs  main.rs
